# OBS-Stream-Timer-Plugin

./: CMakeLists.txt  README.md  obs.def
build-win/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake
cmake/toolchains/: windows-mingw.cmake
data/locale/: en-US.ini
src/: plugin.cpp
